# cm4ai-metadata-model-linkml

./: .cruft.json  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Boolean/: index.html
Computation/: index.html
Curie/: index.html
Dataset/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Software/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
additionalDocumentation/: index.html
associatedPublication/: index.html
author/: index.html
calledBy/: index.html
cm4ai-metadata-model-linkml/: index.html
contentUrl/: index.html
context/: index.html
dataSchema/: index.html
dateCreated/: index.html
dateModified/: index.html
datePublished/: index.html
derivedFrom/: index.html
description/: index.html
examples/: FairscapeBaseModel, Dataset, Software, Computation-001.yaml  README.md
format/: index.html
generatedBy/: index.html
id/: index.html
keywords/: index.html
name/: index.html
runBy/: index.html
search/: search_index.json
src/docs/: about.md
tests/: __init__.py  test_data.py
type/: index.html
usedBy/: index.html
usedByComputation/: index.html
usedDataset/: index.html
usedSoftware/: index.html
version/: index.html
(+18 files in other folders)
